Added myAttendance Component.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build-dev": "babel-node tools/build.dev.js",
     "deploy-sfdc": "echo 'not implemented'"
   },
-  "dependencies": {},
   "devDependencies": {
+    "highcharts": "^5.0.6",
     "babel-cli": "^6.9.0",
     "babel-core": "^6.3.17",
     "babel-loader": "^6.2.0",
